--- a/package.json
+++ b/package.json
@@ -16,9 +16,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.1.3",
+    "helmet": "^7.0.0",
+    "hpp": "^0.2.3",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.6.2"
+    "mongoose": "^7.6.2",
+    "nodemailer": "^6.9.7",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
