--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.18.0",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
